[gd_scene load_steps=18 format=3 uid="uid://blj15re1ibmb"]

[ext_resource type="Script" uid="uid://c5iquxovmcs3r" path="res://levels/objects/grass/grass.gd" id="1_f3aon"]
[ext_resource type="Script" uid="uid://csu2b21cwchqw" path="res://scripts/collision/hurt_area_2d.gd" id="1_stfjd"]
[ext_resource type="Texture2D" uid="uid://fkbf6r03bpiu" path="res://assets/object/bush/bush_idle_1.png" id="2_en02w"]
[ext_resource type="Texture2D" uid="uid://wh7u2ae8b8r8" path="res://assets/object/bush/bush_cut.png" id="2_htd84"]
[ext_resource type="Texture2D" uid="uid://c5ehwoyhjpwc2" path="res://assets/object/bush/bush_idle_2.png" id="3_c2kaf"]
[ext_resource type="Texture2D" uid="uid://v7h6vq2xpfxc" path="res://assets/object/bush/bush_hit_1.png" id="3_f3aon"]
[ext_resource type="Texture2D" uid="uid://d0b56d0n8onn5" path="res://assets/object/bush/bush_hit_2.png" id="4_plb2c"]
[ext_resource type="Texture2D" uid="uid://c0k88fhwaa8ji" path="res://assets/object/bush/bush_idle_3.png" id="4_si30t"]
[ext_resource type="Texture2D" uid="uid://c10ujran0ln87" path="res://assets/object/bush/bush_hit_3.png" id="5_ryt2e"]
[ext_resource type="Texture2D" uid="uid://ctkmx2psj3j57" path="res://assets/object/bush/bush_idle_4.png" id="5_x1tub"]
[ext_resource type="Texture2D" uid="uid://b3x2k7i7vs7ye" path="res://assets/object/bush/bush1.png" id="10_umtpg"]
[ext_resource type="Texture2D" uid="uid://blrof0lcqxuld" path="res://assets/object/bush/bush2.png" id="11_v2nmw"]
[ext_resource type="Texture2D" uid="uid://bsdrg8gnmq1us" path="res://assets/object/bush/bush3.png" id="12_raff7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aj2e8"]
size = Vector2(42, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_vf1sg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_htd84")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_f3aon")
}, {
"duration": 1.0,
"texture": ExtResource("4_plb2c")
}, {
"duration": 1.0,
"texture": ExtResource("5_ryt2e")
}, {
"duration": 1.0,
"texture": ExtResource("2_htd84")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_en02w")
}, {
"duration": 1.0,
"texture": ExtResource("3_c2kaf")
}, {
"duration": 1.0,
"texture": ExtResource("4_si30t")
}, {
"duration": 1.0,
"texture": ExtResource("5_x1tub")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_37173"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_umtpg")
}, {
"duration": 1.0,
"texture": ExtResource("11_v2nmw")
}, {
"duration": 1.0,
"texture": ExtResource("12_raff7")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_umtpg")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f3aon"]
size = Vector2(51, 41)

[node name="Grass" type="Node2D"]
z_index = -1
script = ExtResource("1_f3aon")

[node name="Direction" type="Node2D" parent="."]

[node name="HurtArea2D" type="Area2D" parent="Direction"]
collision_mask = 0
script = ExtResource("1_stfjd")
metadata/_custom_type_script = "uid://csu2b21cwchqw"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/HurtArea2D"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_aj2e8")

[node name="DeadAnimatedSprite2D" type="AnimatedSprite2D" parent="Direction"]
visible = false
position = Vector2(5, -21)
sprite_frames = SubResource("SpriteFrames_vf1sg")
animation = &"idle"

[node name="AliveAnimatedSprite2D" type="AnimatedSprite2D" parent="Direction"]
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_37173")
animation = &"idle"

[node name="Area2D" type="Area2D" parent="Direction"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/Area2D"]
position = Vector2(-0.5, -10.5)
shape = SubResource("RectangleShape2D_f3aon")

[connection signal="hurt" from="Direction/HurtArea2D" to="." method="_on_hurt_area_2d_hurt"]
